根据sonar完善代码